# eduardorittner.github.io

./: .gitignore  04-09-2023.html  Makefile  about.html  config.yaml  flower.html  hugo.toml  index.html  page.html  post.html  style.css  todo.md
.github/workflows/: alog.yaml  blog.yaml  build.yaml
assets/css/: main.css
builder/: Cargo.toml
builder/.cargo/: config.toml
builder/benches/: benchmark.rs
builder/pandalib/: Cargo.toml
builder/pandalib/benches/: benchmark.rs
builder/pandalib/src/: builder.rs  error.rs  html.rs  lib.rs  page.rs
builder/pauto/: Cargo.toml
builder/src/: builder.rs  html.rs  lib.rs  link.rs  main.rs  page.rs  rss.rs  validate.rs
builder/tests/: links.rs
content/: _index.md
content/notes/: desktop-launcher.md  firefox.md  index.md  nonzerouint.md  useful-commands.md
content/posts/: my-first-open-source-contribution.md
content/ramblings/: prose.md
eduardos-til/: config.yaml
output/: index.html  notes.html  posts.html  ramblings.html  style.css
output/notes/: archive.html  desktop-launcher.html  eita.html  faster-rust-compile.html  firefox.html  git.html  nonzerouint.html  pacman.html  useful-commands.html
output/posts/: borrowck.html  dynamic-programming.html  helix-debug.html  implementing-vga.html  my-first-open-source-contribution.html  sds-source-code.html  setup-multiple-git-accounts.en.html
output/ramblings/: 2o.html  hello.html  jazz_daredevil.html  prose.html
public/: 404.html  index.html  index.xml  sitemap.xml
src/: index.md  posts.md  ramblings.md  reading.md  style.css  webtui.css
(+88 files in other folders)
