[package]
name = "builder"
version = "0.1.0"
edition = "2021"

[features]
default = ["validate"]
validate = ["dep:reqwest", "dep:rayon", "dep:jwalk"]

[dependencies]
comrak = { version = "0.29.0", default-features = false }
walkdir = "2.5.0"
reqwest = {version = "0.12.9", features = ["blocking"], optional = true}
rayon = {version="1.10.0", optional = true}
jwalk = {version = "0.5", optional = true}
