[package]
name = "builder"
version = "0.1.0"
edition = "2021"

[dependencies]
comrak = { version = "0.29.0", default-features = false, features = ["syntect"] }
walkdir = "2.5.0"
reqwest = {version = "0.12.9", features = ["blocking"]}
rayon = {version="1.10.0", optional = true}
jwalk = {version = "0.5", optional = true}
rss = "2.0.11"
chrono = "0.4.39"
tokio = {version = "1.43.0", features = ["full"]}
