[package]
name = "pandalib"
version = "0.1.0"
edition = "2021"

[dependencies]
comrak = { version = "0.29.0", default-features = false, features = ["syntect"] }
walkdir = "2.5.0"
rss = "2.0.11"
chrono = "0.4.39"
async-std = {version = "1.13.0", features = ["unstable"]}
surf = "2.3.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

